# oqtimal

./: pyproject.toml
.github/workflows/: publish.yaml  tests.yaml
src/oqtimal/: optimal_transport.py
tests/: test_optimal_transport.py
