[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oqtimal"
version = "0.0.2a0"
authors = [
    { name = "Lars Kühmichel", email = "larskuedev@gmail.com" },
]
description = "An Optimal Transport Library for Deep Learning."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/LarsKue/oqtimal"
Issues = "https://github.com/LarsKue/oqtimal/issues"

[project.dependencies]
jax = "0.5"
